=======
CHANGES
=======

3.2 (unreleased)
----------------

- Added support for Python 3.8


3.1 (2018-10-24)
----------------

- Added support for Python 3.7.


3.0 (2018-05-28)
----------------

- Added support for Python 3.5, 3.6 and PyPy3.

- Dropped support for Python 2.6 and 3.3.


2.0.0 (2013-02-25)
------------------

- Added Python 3.3 and PyPy support.

- Added tests.


1.4.0 (2009-07-23)
------------------

- Initial PyPI release.